feat: Rework party system with pending invites and interactive party UI
- PartyService: replace instant-join with time-limited pending invites (accept/decline); auto-create a party when an invite is sent by a player with no party
- PartyCommand: bare /party now opens the interactive PartyPage UI; add accept/decline subcommands and member notifications
- Add PartyPage custom UI: roster view, owner kick, accept/decline pending invites, leave and disband actions
- DungeonMembershipRepository: track ACTIVE/LEFT membership state with in-transaction helpers
- DungeonInstanceService: owner-sensitive dungeon start; Continue migrates party members out of their other active instances subject to the 6-active cap; leave handling with ownership transfer
- DungeonCommand: handle non-owner start attempts and add leave flow
- DuntalePlugin: wire Continue, portal, and death handlers to the new membership-aware service flows
- Update and extend PartyService and DungeonInstanceService tests